AWS/separated/main.tf
provider "aws" {
  region = var.region
}

data "aws_ssm_parameter" "ami_name" {
  name = "/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2"
}

# --------------------- RESOURCES --------------------(◉‿◉ ) #
# ----------Networking  -----------------------------        #
resource "aws_vpc" "vpc" {
  cidr_block = "172.14.0.0/16"
  enable_dns_hostnames = true
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
}

resource "aws_subnet" "subnet1" {
  cidr_block = "172.14.0.0/20"
  vpc_id = aws_vpc.vpc.id
  map_public_ip_on_launch = true
}

# ----------Routing    -----------------------------         #
resource "aws_route_table" "rtb" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}
resource "aws_route_table_association" "rta-subnet1" {
  subnet_id = aws_subnet.subnet1.id
  route_table_id = aws_route_table.rtb.id
}

# ----------Security Gr-----------------------------         #
# Nginx sec group
resource "aws_security_group" "nginx-sg" {
  name = "nginx_sg"
  vpc_id = aws_vpc.vpc.id
  
  ## HTTP access from anywhere
  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ## outbound internet access
  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# ----------Instances -----------------------------          #
resource "aws_instance" "nginx1" {
  ami = nonsensitive(data.aws_ssm_parameter.ami_name.value)
  instance_type  = "t2.micro"
  subnet_id = aws_subnet.subnet1.id
  vpc_security_group_ids = [aws_security_group.nginx-sg.id]

  user_data = <<EOF

#! /bin/bash
sudo amazon-linux-extras install -y nginx1
sudo systemctl restart ngingx
sudo rm /usr/share/nginx/html/index.html
echo '<html><head><title>Hello Word! </title></head><body style=\"background-color:#1F888D\"><p style=\"text-align: center;\"><span style=\"color:#FFFFFF;\"><span style=\"font-size:28px;\">You did it LULZ! Have a &#127790;</span></span></p></body></html>' | sudo tee /usr/share/nginx/html/index.html
EOF

}
